--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,206 +1,119 @@
-<div id="content" class="contact-background">
-    <div class="container-fluid">
-        <nav class="navbar collapse navbar-collapse navbar-expand-lg peach-gradient" id="contact-nav">
-            <div class="navbar-header" id="landing-header">
-                <a href="/landing">
-                    <img src="/Images/taticon.png" id="tatlogo">
+ <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
+        <!-- <div class="container"> -->
+        <a class="navbar-brand" href="index.html">Eric Willard</a>
+
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+
+        <!-- Links -->
+        <ul class="navbar-nav navbar-right list-inline">
+            <li class="nav-item list-item-inline">
+                <a class="nav-link" href="index.html">About
                 </a>
-                <a href="/landing">
-                    <h2 class="navbar-brand">The Adaptive Traveler</h2>
-                </a>
-            </div>
-                <div class="input-group">
-                    <form id="form-search" method="get" action="" role="form" class="form-inline">
-                        <div class="form-group has-feedback">
-                            <div class="input-group">
-                                <input style="color: #e7e7e7 !important;" type="text" class="form-control form-inline" id="explore" placeholder="Explore"
-                                    id="search-text-input">
-                                <span class="input-group-btn">
-                                    <button id="letsgo" class="btn btn-default" type="button">Let's Go!
-                                        <span>
-                                            <i class="fa fa-paper-plane-o ml-1"></i>
-                                        </span>
-                                    </button>
-                                </span>
-                                <button class="btn btn-default" id="pop-destinations" type="button">Popular Destinations
-                                <span>
-                                    <i class="fa fa-map-pin fa-4x ml-3"></i>
-                                </span>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <ul class="navbar-nav navbar-right mr-auto" id="nav-links">
-                    <li>
-                        <a id="contact-about" href="/contact">Contact  | </a>
-                    </li>
-                    <li>
-                        <a id="contact-about" class="ml-2" href="/about">About</a>
-                    </li>
-                </ul>
-            
-        </nav>
-    </div>
+            </li>
+            <li class="nav-item list-item-inline">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item list-item-inline">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+        <!-- links -->
+
+        </div>
+        <!-- </div> -->
+    </nav>
     <div class="container-fluid">
-        <div class="row main-content">
-            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-2 col-xl-2">
-                <div class="dropdown">
-                    <button class="btn btn-default btn-lg dropdown-toggle" type="button" id="side-dropdowns" data-toggle="dropdown">The "Good Good"
+        <!-- <div class="row main-content"> -->
+        <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1">
+            <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
+                <div class="panel panel-header text-center">Contact<i class="glyphicon glyphicon-envelope"></i></div>
+                <div class="panel panel-body">
 
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Maps</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Hotels</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Which Direction?</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Cool Spots</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Photo Locations</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Videos</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Caché
-
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu2">
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Off-The-Beaten-Path</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Hidden Stuff</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Do What?
-
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu3">
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Family</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Friends</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Couples</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Célibataire</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Group</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Grub
-
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu4">
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Quick Eats</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Romantic</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Family</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Brew Bites</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Snacks</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Healthy</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Vegan</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Cultural
-
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu5">
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Language Phrases</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Customs & Practices</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">History</a>
-                        </li>
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" href="#">Art</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-2 col-md-9 col-md-offset-2 col-lg-2 col-lg-offset-2 col-xl-5 col-xl-offset-5">
-                <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
-                    <div class="panel panel-header text-center" id="Contact-Header">Contact</div>
                     <!-- Form contact -->
-                    <form id="contact-form" action="mailto:ewill2020@gmail.com" method="post" enctype="text/plain">
-                        <div class="md-form">
-                            <i class="fa fa-user prefix grey-text"></i>
+                    <form action="mailto:ewill2020@gmail.com" method="post" enctype="text/plain">
+                        <div class="form-group">
+                            <label for="form3">Your name</label><i class="far fa-user"></i>
                             <input type="text" id="form3" class="form-control">
-                            <label for="form3">
-                                Your name
-                            </label>
+
                         </div>
-                        <div class="md-form">
-                            <i class="fa fa-envelope prefix grey-text"></i>
+
+                        <div class="form-group">
+                            <label for="form2">Your email</label><i class="far fa-envelope"></i>
+
                             <input type="text" id="form2" class="form-control">
-                            <label for="form2">
-                                Your email
-                            </label>
+
                         </div>
-                        <div class="md-form">
-                            <i class="fa fa-tag prefix grey-text"></i>
+
+                        <div class="form-group">
+                            <label for="form34">Subject</label><i class="fas fa-tag"></i>
                             <input type="text" id="form32" class="form-control">
-                            <label for="form32">
-                                Subject
-                            </label>
                         </div>
-                        <div class="md-form">
-                            <i class="fa fa-pencil prefix grey-text"></i>
-                            <textarea type="text" id="form8" class="md-textarea" style="height: 100px">
-                                            </textarea>
-                            <label for="form8">
-                                Your message
-                            </label>
+
+                        <div class="form-group">
+                            <label for="form8">Your message</label><i class="fas fa-pencil-alt"></i>
+                            <br>
+                            <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
+
                         </div>
-                        <div class="text-center">
-                            <button class="btn btn-default" id="send-button">Send
-                                <span>
-                                    <i class="fa fa-paper-plane-o ml-1"></i>
-                                </span>
-                            </button>
+
+                        <div class="send">
+                            <button type="submit" class="btn btn-default">Send <span><i class="fab fa-telegram-plane"></i></span></button>
                         </div>
+
                     </form>
                     <!-- Form contact -->
                 </div>
             </div>
         </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
+            <div class="panel panel-default">
+                <div class="panel panel-header">
+                    Connect With Me<i class="glyphicon glyphicon-transfer"></i>
+                </div>
+                <div class="panel panel-body" style="text-align: center;">
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="https://www.linkedin.com/in/willarderic/">
+                                <img src="images/linkedin.png" alt="linkedin" class="linkedin" style="height: 60px; width: 60px;">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.github.com/ewill20">
+                                <img src="images/githubicon.png" alt="github" class="github" style="height: 60px; width: 60px">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://stackoverflow.com/users/8011910/e-dub">
+                                <img src="images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 60px; width: 60px;">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.500px.com/ewill20">
+                                <img src="images/500px.png" alt="500px" class="500px" style="height: 70px; width: 70px;">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.viewbug.com/member/ewill">
+                                <img src="images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 60px; width: 60px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/ewill20">
+                                <img src="images/InstagramNew.jpg" alt="Instagram" class="Instagram" style="height: 60px; width: 60px;">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
+                                <img src="images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 60px; width: 60px;">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<footer class="footer">
-    © 2017 The Adaptive Traveler
-</footer>
+    <footer class="footer">
+        © Copyright 2019 Eric Willard
+    </footer>
