playing with views files to iron out internal server error

--- a/views/popDestinations.hbs
+++ b/views/popDestinations.hbs
@@ -1,6 +1,6 @@
-<div id="content" class="contact-background">
+<div id="content" class="destinations-background">
     <div class="container-fluid">
-        <nav class="navbar collapse navbar-collapse navbar-expand-lg peach-gradient" id="contact-nav">
+        <nav class="navbar collapse navbar-collapse navbar-expand-lg blue-gradient" id="landing-nav">
             <div class="navbar-header" id="landing-header">
                 <a href="/landing">
                     <img src="/Images/taticon.png" id="tatlogo">
@@ -9,6 +9,7 @@
                     <h2 class="navbar-brand">The Adaptive Traveler</h2>
                 </a>
             </div>
+            
                 <div class="input-group">
                     <form id="form-search" method="get" action="" role="form" class="form-inline">
                         <div class="form-group has-feedback">
@@ -16,13 +17,13 @@
                                 <input style="color: #e7e7e7 !important;" type="text" class="form-control form-inline" id="explore" placeholder="Explore"
                                     id="search-text-input">
                                 <span class="input-group-btn">
-                                    <button id="letsgo" class="btn btn-default" type="button">Let's Go!
+                                    <button id="letsgo-popDestinations" class="btn btn-default" type="button">Let's Go!
                                         <span>
                                             <i class="fa fa-paper-plane-o ml-1"></i>
                                         </span>
                                     </button>
                                 </span>
-                                <button class="btn btn-default" id="pop-destinations" type="button">Popular Destinations
+                                <button class="btn btn-default" id="pop-destinations-blue" type="button">Popular Destinations
                                 <span>
                                     <i class="fa fa-map-pin fa-4x ml-3"></i>
                                 </span>
@@ -33,20 +34,20 @@
                 </div>
                 <ul class="navbar-nav navbar-right mr-auto" id="nav-links">
                     <li>
-                        <a id="contact-about" href="/contact">Contact  | </a>
+                        <a id="contact-about" href="/contact">Contact | </a>
                     </li>
                     <li>
-                        <a id="contact-about" class="ml-2" href="/about">About</a>
+                        <a id="contact-about" class="ml-2" href="/about">   About</a>
                     </li>
                 </ul>
             
         </nav>
     </div>
-    <div class="container-fluid">
-        <div class="row main-content">
-            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-2 col-xl-2">
+    <div class="container-fluid" id="content">
+    <div class="row">
+        <div class="col-xs-1 col-sm-2 col-md-3 col-lg-2 col-xl-2">
                 <div class="dropdown">
-                    <button class="btn btn-default btn-lg dropdown-toggle" type="button" id="side-dropdowns" data-toggle="dropdown">The "Good Good"
+                    <button class="btn btn-default btn-lg dropdown-toggle" type="button" id="side-dropdowns-blue" data-toggle="dropdown">The "Good Good"
 
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
@@ -71,7 +72,7 @@
                     </ul>
                 </div>
                 <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Caché
+                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns-blue" data-toggle="dropdown">Caché
 
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu2">
@@ -84,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Do What?
+                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns-blue" data-toggle="dropdown">Do What?
 
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu3">
@@ -106,7 +107,7 @@
                     </ul>
                 </div>
                 <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Grub
+                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns-blue" data-toggle="dropdown">Grub
 
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu4">
@@ -134,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="dropdown">
-                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns" data-toggle="dropdown">Cultural
+                    <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="side-dropdowns-blue" data-toggle="dropdown">Cultural
 
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu5">
@@ -153,54 +154,54 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-2 col-md-9 col-md-offset-2 col-lg-2 col-lg-offset-2 col-xl-5 col-xl-offset-5">
-                <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
-                    <div class="panel panel-header text-center" id="Contact-Header">Contact</div>
-                    <!-- Form contact -->
-                    <form id="contact-form" action="mailto:ewill2020@gmail.com" method="post" enctype="text/plain">
-                        <div class="md-form">
-                            <i class="fa fa-user prefix grey-text"></i>
-                            <input type="text" id="form3" class="form-control">
-                            <label for="form3">
-                                Your name
-                            </label>
-                        </div>
-                        <div class="md-form">
-                            <i class="fa fa-envelope prefix grey-text"></i>
-                            <input type="text" id="form2" class="form-control">
-                            <label for="form2">
-                                Your email
-                            </label>
-                        </div>
-                        <div class="md-form">
-                            <i class="fa fa-tag prefix grey-text"></i>
-                            <input type="text" id="form32" class="form-control">
-                            <label for="form32">
-                                Subject
-                            </label>
-                        </div>
-                        <div class="md-form">
-                            <i class="fa fa-pencil prefix grey-text"></i>
-                            <textarea type="text" id="form8" class="md-textarea" style="height: 100px">
-                                            </textarea>
-                            <label for="form8">
-                                Your message
-                            </label>
-                        </div>
-                        <div class="text-center">
-                            <button class="btn btn-default" id="send-button">Send
-                                <span>
-                                    <i class="fa fa-paper-plane-o ml-1"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </form>
-                    <!-- Form contact -->
+        <div class="col-xs-4 col-xs-offset-2 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 col-xl-4 col-xl-offset-2">
+            <div class="panel panel-default" id="berlin-dest-panel">
+                <div class="panel panel-header text-center" id="berlin-dest-header">
+                    <a id="berlin-link" href="/berlin"><h2 id="berlin-link">Berlin, Germany</h2></a>
+                </div>
+                <div class="panel panel-body" id="berlin-body">
+                    
+                    <img class="img-responsive" id="berlin-thumbnail" src="../Images/BerlinBrandenburgerTor1.jpg">
+                </div>
+            </div>
+        </div>
+        <div style="margin-left: 50px;" class="col-xs-4 col-xs-offset-2 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-1 col-lg-4 col-xl-4 col-xl-offset-2">
+            <div class="panel panel-default" id="kyoto-dest-panel">
+                <div class="panel panel-header text-center" id="berlin-dest-header">
+                    <a id="kyoto-link" href="/kyoto"><h2 id="kyoto-link">Kyoto, Japan</h2></a>
+                </div>
+                <div class="panel panel-body" id="berlin-body">
+                    
+                    <img class="img-responsive" id="kyoto-thumbnail" src="../Images/Kyoto-shiShrineRV.jpg">
                 </div>
             </div>
         </div>
     </div>
-</div>
-<footer class="footer">
-    © 2017 The Adaptive Traveler
-</footer>
+    <div class="row">
+        <div class="col-xs-4 col-xs-offset-2 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-1 col-lg-4 col-xl-4 col-xl-offset-2">
+            <div class="panel panel-default" id="hangzhou-dest-panel">
+                <div class="panel panel-header text-center" id="berlin-dest-header">
+                    <a id="hangzhou-link" href="/hangzhou"><h2 id="hangzhou-link">Hangzhou, China</h2></a>
+                </div>
+                <div class="panel panel-body" id="hangzhou-body">
+                    
+                    <img class="img-responsive" id="hangzhou-thumbnail" src="../Images/CNWestLakeBoat.jpg">
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-4 col-xs-offset-2 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-1 col-lg-4 col-xl-4 col-xl-offset-2">
+            <div class="panel panel-default" id="paris-dest-panel">
+                <div class="panel panel-header text-center" id="paris-dest-header">
+                    <a id="paris-link" href="/paris"><h2 id="paris-link">Paris, France</h2></a>
+                </div>
+                <div class="panel panel-body" id="paris-body">
+                    
+                    <img class="img-responsive" id="paris-thumbnail" src="../Images/ParisMetroSignRV2.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <footer id="about-footer" class="footer">
+                © 2017 The Adaptive Traveler
+            </footer>
