--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>The Adaptive Traveler</title>
+    <title>Eric Willard</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="../Images/taticon.png">
+    <link rel="icon" type="image/ico" href="../images/ewillicon3.png">
     
     <!-- Material Design Bootstrap -->
     <link href="/MDB/css/mdb.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         type='text/css' media='all' />
     
     <!-- Your custom styles (optional) -->
-    <link href="/css/tat.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -29,9 +29,9 @@
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
        
     <!-- Handlebars -->
-    <script rel="stylesheet" type="text/hbs" src="/views/landing.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/signin.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/singup.hbs"></script> 
+    <script rel="stylesheet" type="text/hbs" src="/views/home.hbs"></script>
+    <!-- <script rel="stylesheet" type="text/hbs" src="/views/contact.hbs"></script>
+    <script rel="stylesheet" type="text/hbs" src="/views/about.hbs"></script>  -->
 
 
     <!-- Ajax CDN -->
@@ -42,8 +42,8 @@
         crossorigin="anonymous"></script>
 
     <!-- Google Maps API -->
-    {{!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrHCqj9IrGhkxjk1NwrpOZLuW8PlH-Kxo&callback=initMap" async
-        defer></script> --}}
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrHCqj9IrGhkxjk1NwrpOZLuW8PlH-Kxo&callback=initMap" async
+        defer></script> -->
     
     <!-- Wikipedia API -->
     <link rel="EditURI" type="application/rsd+xml" href="https://wikitravel.org/wiki/en/api.php?action=rsd"/>
