--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -33,8 +33,8 @@
        
     <!-- Handlebars -->
     <script rel="stylesheet" type="text/hbs" src="/views/home.hbs"></script>
-    <!-- <script rel="stylesheet" type="text/hbs" src="/views/contact.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/about.hbs"></script>  -->
+    <script rel="stylesheet" type="text/hbs" src="/views/contact.hbs"></script>
+    <script rel="stylesheet" type="text/hbs" src="/views/about.hbs"></script> 
 
 
     <!-- Ajax CDN -->
