reverting small changes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,37 +7,37 @@
     <ul class="navbar-collapse justify-content-between mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.linkedin.com/in/willarderic/">
-                <img src="../public/images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
+                <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.github.com/ewill20">
-                <img src="images/githubicon.png" alt="github" class="github" style="height: 55px; width: 55px">
+                <img src="Images/githubicon.png" alt="github" class="github" style="height: 55px; width: 55px">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://stackoverflow.com/users/8011910/e-dub">
-                <img src="images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 55px; width: 55px;">
+                <img src="Images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.500px.com/ewill20">
-                <img src="images/500px.png" alt="500px" class="500px" style="height: 60px; width: 60px;">
+                <img src="Images/500px.png" alt="500px" class="500px" style="height: 60px; width: 60px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.viewbug.com/member/ewill">
-                <img src="images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 55px; width: 55px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+                <img src="Images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 55px; width: 55px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.instagram.com/ewill20">
-                <img src="images/InstagramNew.png" alt="Instagram" class="Instagram" style="height: 55px; width: 55px;">
+                <img src="Images/InstagramNew.png" alt="Instagram" class="Instagram" style="height: 55px; width: 55px;">
             </a>
         </li>
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
-                <img src="images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 55px; width: 55px;">
+                <img src="Images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 55px; width: 55px;">
             </a>
         </li>
     </ul>
@@ -64,7 +64,7 @@
             <!--Left Column Top-->
             <!--Web Development-->
             <div class="card WebDevSS" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><!-- <a href="/webPort"> -->
-                    <img class="card-img-top" id="WebDevSS" src="../images/clicktripUI.png">
+                    <img class="card-img-top" id="WebDevSS" src="Images/clicktripUI.png">
                     <div class="card-body">
                         <p id="card-text">Web Development<i class="glyphicon glyphicon-globe"></i></p>
                     </div>
@@ -79,7 +79,7 @@
 
             <!--Experience-->
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/experience">
-                    <img class="card-img-top" id="experiencePic" src="../images/CNBacktoSchool1.jpg">
+                    <img class="card-img-top" id="experiencePic" src="Images/CNBacktoSchool1.jpg">
                     <div class="card-body">
                         <p id="card-text">Experience<i class="glyphicon glyphicon-ok"></i></p>
                     </div>
@@ -96,7 +96,7 @@
             <!--Education-->
             <a href="/education">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
-                    <img class="card-img-top" id="gradPic" src="../images/Graduation-UCSD-Me.jpg">
+                    <img class="card-img-top" id="gradPic" src="Images/Graduation-UCSD-Me.jpg">
                     <div class="card-body">
                         <p id="card-text">Education<i class="glyphicon glyphicon-education"></i></p>
                     </div>
@@ -111,7 +111,7 @@
 
             <!--Photography Panel-->
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/photo">
-                    <img class="card-img-top" id="meShooting" src="../images/FranceMeIrelandRV.jpg">
+                    <img class="card-img-top" id="meShooting" src="Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
                     </div> -->
                     <div class="card-body">
@@ -125,7 +125,7 @@
 
             <!--Skills Panel-->
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/skills">
-                    <img class="card-img-top" id="skillsPic" src="../images/skillsPic.jpg">
+                    <img class="card-img-top" id="skillsPic" src="Images/skillsPic.jpg">
 
                     <div class="card-body">
                         <p id="card-text">Skills<i class="glyphicon glyphicon-star"></i></p>
