--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,12 +10,10 @@
     <title>Eric Willard</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
+    <link rel="icon" type="image/ico" href="../images/ewillicon3.png">
     
     <!-- Material Design Bootstrap -->
     <link href="/MDB/css/mdb.min.css" rel="stylesheet">
-    <!-- <link rel='stylesheet' id='ajax-auth-style-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/ajax-auth-style.css?ver=4.8.2'
-        type='text/css' media='all' /> -->
     <link rel='stylesheet' id='compiled.css-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled.min.css?ver=4.4.0'
         type='text/css' media='all' />
     
@@ -24,22 +22,16 @@
     
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
-
-    <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
     
-    <!-- FontAwesome Icons CDN -->
-    <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
+    <!--FontAwesome Bootstrap-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
        
     <!-- Handlebars -->
     <script rel="stylesheet" type="text/hbs" src="/views/home.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/contact.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/about.hbs"></script> 
-
 
     <!-- Ajax CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -47,13 +39,6 @@
     <!-- jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-
-    <!-- Google Maps API -->
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrHCqj9IrGhkxjk1NwrpOZLuW8PlH-Kxo&callback=initMap" async
-        defer></script> -->
-    
-    <!-- <!-- Wikipedia API -->
-    <link rel="EditURI" type="application/rsd+xml" href="https://wikitravel.org/wiki/en/api.php?action=rsd"/> -->
     
     <!-- Javascript files -->
     <script rel="stylesheet" src="/js/app.js" type="text/javascript"></script>
