just fixed icon again

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,10 +10,10 @@
     <title>Eric Willard</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="../images/ewillicon3.png">
+    <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
     
     <!-- Material Design Bootstrap -->
-    <link href="/MDB/css/mdb.min.css" rel="stylesheet">
+    <link href="/MDB/css/mdb.min.css" type='text/css' rel="stylesheet">
     <link rel='stylesheet' id='compiled.css-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled.min.css?ver=4.4.0'
         type='text/css' media='all' />
     
