--- a/views/home.hbs
+++ b/views/home.hbs
@@ -44,7 +44,7 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto list-inline">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" id="home-link">Home</a>
+            <a class="nav-link" href="/home.hbs">Home</a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/contact">Contact</a>
