--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,5 @@
+
+<div id="content"
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
     <!-- <div class="container"> -->
@@ -148,6 +150,7 @@
             <!--End Video Panel-->
         </div>
     </div>
+</div>
 </div>
 <footer class="footer">
     © Copyright 2019 Eric Willard
