added content id tag to home

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -65,12 +65,13 @@
 
             <!--Left Column Top-->
             <!--Web Development-->
-            <div class="card WebDevSS" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><!-- <a href="/webPort"> -->
+            <a href="/webPort">
+            <div class="card WebDevSS" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="WebDevSS" src="Images/clicktripUI.png">
                     <div class="card-body">
                         <p id="card-text">Web Development<i class="glyphicon glyphicon-globe"></i></p>
                     </div>
-            </div><!-- </a> -->
+            </div></a>
 
         </div>
         <!--End Web Development Column-->
