added alert to check if app.js is working

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,9 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
     <!-- <div class="container"> -->
-    <a class="navbar-brand" href="/home">Eric Willard</a>
+    <a href="/home">
+    <h2 class="navbar-brand">Eric Willard</h2>
+    </a>
 
     <!-- Social Media Contact Links-->
     <ul class="navbar-collapse justify-content-between mr-auto list-inline">
@@ -46,7 +48,7 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto list-inline">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/popDestinations">Home</a>
+            <a class="nav-link" id="pop-destinations" href="/popDestinations">Home</a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/contact">Contact</a>
