--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,8 +16,6 @@
     <link href="/MDB/css/mdb.min.css" type='text/css' rel="stylesheet">
     <link rel='stylesheet' id='compiled.css-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled.min.css?ver=4.4.0'
         type='text/css' media='all' />
-    <!--Handlebars CDN-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.amd.js" rel="stylesheet">
 
     <!-- Your custom styles (optional) -->
     <link href="/css/style.css" rel="stylesheet">
@@ -34,6 +32,7 @@
        
     <!-- Handlebars -->
     <script rel="stylesheet" type="text/hbs" src="/views/home.hbs"></script>
+    <script rel="stylesheet" type="text/hbs" src="/views/popDestinations.hbs"></script>
 
     <!-- Ajax CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
