--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>The Adaptive Traveler</title>
+    <title>Eric Willard</title>
 
     <!-- Favicon link -->
     <link rel="icon" type="image/ico" href="../Images/taticon.png">
