changed authcontroller, server.js, and added links to landing for about, contact, and home

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -8,14 +8,14 @@
         <!-- Links -->
         <ul class="navbar-nav navbar-right list-inline">
             <li class="nav-item list-item-inline">
-                <a class="nav-link" href="index.html">About
+                <a class="nav-link" href="/home">Home</a>
+            </li>
+            <li class="nav-item list-item-inline">
+                <a class="nav-link" href="/about">About
                 </a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item list-item-inline">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
         </ul>
         <!-- links -->
