changed images src and a few links on contact & about

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 <!--Start Nav-->
     <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
         <!-- <div class="container"> -->
-        <a class="navbar-brand" href="index.html">Eric Willard</a>
+        <a class="navbar-brand" href="/home">Eric Willard</a>
 
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
@@ -9,11 +9,11 @@
         <!-- Links -->
         <ul class="navbar-nav navbar-right list-inline">
             <li class="nav-item list-item-inline">
-                <a class="nav-link" href="/about">About
-                </a>
+                <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item list-item-inline">
-                <a class="nav-link" href="/home">Home</a>
+                <a class="nav-link" href="/about">About
+                </a>
             </li>
             <li class="nav-item list-item-inline">
                 <a class="nav-link" href="/contact">Contact</a>
@@ -33,7 +33,7 @@
 
 
                     <div class="panel panel-body">
-                        <img class="img-responsive" id="mainSelfie" src="images/FranceMeIrelandRV.jpg">
+                        <img class="img-responsive" id="mainSelfie" src="Images/FranceMeIrelandRV.jpg">
                         <p>
                             I am originally from Topeka, Kansas, but it hasn't been "home" for quite some time. From '04-'14 I lived in the Los Angeles & San Diego areas working and attending university. During school, and post graduation, I have lived in Berlin, Paris, and Hangzhou, China. I returned to Kansas in December '16 and subsequently returned to China in order to spend a year teaching web development in English to software engineering students. </p>
 
@@ -61,37 +61,37 @@
                         <ul class="list-inline">
                             <li class="list-inline-item">
                                 <a href="https://www.linkedin.com/in/willarderic/">
-                                    <img src="images/linkedin.png" alt="linkedin" class="linkedin" style="height: 60px; width: 60px;">
+                                    <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 60px; width: 60px;">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://www.github.com/ewill20">
-                                    <img src="images/githubicon.png" alt="github" class="github" style="height: 60px; width: 60px">
+                                    <img src="Images/githubicon.png" alt="github" class="github" style="height: 60px; width: 60px">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://stackoverflow.com/users/8011910/e-dub">
-                                    <img src="images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 60px; width: 60px;">
+                                    <img src="Images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 60px; width: 60px;">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://www.500px.com/ewill20">
-                                    <img src="images/500px.png" alt="500px" class="500px" style="height: 70px; width: 70px;">
+                                    <img src="Images/500px.png" alt="500px" class="500px" style="height: 70px; width: 70px;">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://www.viewbug.com/member/ewill">
-                                    <img src="images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 60px; width: 60px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+                                    <img src="Images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 60px; width: 60px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://www.instagram.com/ewill20">
-                                    <img src="images/InstagramNew.jpg" alt="Instagram" class="Instagram" style="height: 60px; width: 60px;">
+                                    <img src="Images/InstagramNew.jpg" alt="Instagram" class="Instagram" style="height: 60px; width: 60px;">
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
-                                    <img src="images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 60px; width: 60px;">
+                                    <img src="Images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 60px; width: 60px;">
                                 </a>
                             </li>
                         </ul>
