--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -76,37 +76,37 @@
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <a href="https://www.linkedin.com/in/willarderic/">
-                                <img src="images/linkedin.png" alt="linkedin" class="linkedin" style="height: 60px; width: 60px;">
+                                <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 60px; width: 60px;">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.github.com/ewill20">
-                                <img src="images/githubicon.png" alt="github" class="github" style="height: 60px; width: 60px">
+                                <img src="Images/githubicon.png" alt="github" class="github" style="height: 60px; width: 60px">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://stackoverflow.com/users/8011910/e-dub">
-                                <img src="images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 60px; width: 60px;">
+                                <img src="Images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 60px; width: 60px;">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.500px.com/ewill20">
-                                <img src="images/500px.png" alt="500px" class="500px" style="height: 70px; width: 70px;">
+                                <img src="Images/500px.png" alt="500px" class="500px" style="height: 70px; width: 70px;">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.viewbug.com/member/ewill">
-                                <img src="images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 60px; width: 60px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+                                <img src="Images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 60px; width: 60px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.instagram.com/ewill20">
-                                <img src="images/InstagramNew.jpg" alt="Instagram" class="Instagram" style="height: 60px; width: 60px;">
+                                <img src="Images/InstagramNew.jpg" alt="Instagram" class="Instagram" style="height: 60px; width: 60px;">
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
-                                <img src="images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 60px; width: 60px;">
+                                <img src="Images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 60px; width: 60px;">
                             </a>
                         </li>
                     </ul>
