--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
         <!-- <div class="container"> -->
-        <a class="navbar-brand" href="index.html">Eric Willard</a>
+        <a class="navbar-brand" href="/home">Eric Willard</a>
 
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
