--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <title>Eric Willard</title>
 
     <!-- Favicon link -->
-    <link rel="icon" type="image/ico" href="../Images/taticon.png">
+    <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
     
     <!-- Material Design Bootstrap -->
     <link href="/MDB/css/mdb.min.css" rel="stylesheet">
