--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -2,6 +2,44 @@
         <!-- <div class="container"> -->
         <a class="navbar-brand" href="/home">Eric Willard</a>
 
+        <!-- Social Media Contact Links-->
+    <ul class="navbar-collapse justify-content-between mr-auto list-inline">
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.linkedin.com/in/willarderic/">
+                <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.github.com/ewill20">
+                <img src="Images/githubicon.png" alt="github" class="github" style="height: 55px; width: 55px">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://stackoverflow.com/users/8011910/e-dub">
+                <img src="Images/stackOverflow.png" alt="StackOverflow" class="stackOverflow" style="height: 55px; width: 55px;">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.500px.com/ewill20">
+                <img src="Images/500px.png" alt="500px" class="500px" style="height: 60px; width: 60px;">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.viewbug.com/member/ewill">
+                <img src="Images/viewbug.jpg" alt="Viewbug" class="Viewbug" style="height: 55px; width: 55px; display: inline-block; border-radius: 60px; box-shadow: 0px 0px 2px #888;">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.instagram.com/ewill20">
+                <img src="Images/InstagramNew.png" alt="Instagram" class="Instagram" style="height: 55px; width: 55px;">
+            </a>
+        </li>
+        <li class="nav-item navbar-center list-inline-item">
+            <a href="https://www.youtube.com/channel/UCJ75p4PUoM-ZbQvO5B-iZ7w?view_as=subscriber">
+                <img src="Images/YouTube-icon.png" alt="YouTube" class="YouTube" style="height: 55px; width: 55px;">
+            </a>
+        </li>
+    </ul>
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 
@@ -67,7 +105,7 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
+   <!--     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
             <div class="panel panel-default">
                 <div class="panel panel-header">
                     Connect With Me<i class="glyphicon glyphicon-transfer"></i>
@@ -112,7 +150,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <footer class="footer">
         © Copyright 2019 Eric Willard
