app crashed, put everything back to landing and added home.hbs to main.hbs

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -29,7 +29,8 @@
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
        
     <!-- Handlebars -->
-    <script rel="stylesheet" type="text/hbs" src="/views/home.hbs"></script>
+    <script rel="stylesheet" type="text/hbs" src="/views/landing.hbs"></script>
+    <script type="text/hbs" rel="stylesheet" src="/views/home.hbs"></script>
     <script rel="stylesheet" type="text/hbs" src="/views/signin.hbs"></script>
     <script rel="stylesheet" type="text/hbs" src="/views/singup.hbs"></script> 
 
