building and designing webPort.hbs

--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -63,6 +63,23 @@
 </div>
 <!--End Navbar-->
 
+<!-- Nav Panels-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+        <!--Left Column Panel-->
+        <!--The Adaptive Traveler-->
+        <a href="https'//the-adaptive-traveler.herokuapp.com">
+            <div class="card"
+                <img class="card-img-top" id="clickTrip" src="../Images/taticon.png">
+                <div class="card-body">
+                <p id="card-text">The Adaptive Traveler</p>
+                </div>
+            </div></a>
+        </div>
+        <!--End Left Column Panel-->
+
 
 
 
