still testing hover effect

--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -75,7 +75,8 @@
                 
                 <!--hover text description-->
                 <div class="view overlay" id="tatDesc">
-                    <div class="mask rgba-blue-strong">
+                <img class="card-img-top img-fluid" id="tat" src="../Images/tatUI.png">
+                    <div class="mask flex rgba-blue-strong">
                         <p class="white-text">
                             Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...
                         </p>
