--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">-->
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
     <!-- <div class="container"> -->
@@ -60,7 +60,7 @@
     </ul>
     </div>
 </nav>
-</div>
+<!--</div>-->
 <!--End Navbar-->
 
 <!-- Nav Panels-->
@@ -76,7 +76,7 @@
                 <!--hover text description-->
                 <div class="view overlay" id="tatDesc">
                 <img class="card-img-top img-fluid" id="tat" src="../Images/tatUI.png">
-                    <div class="mask flex rgba-blue-strong">
+                    <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
                             Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...
                         </p>
@@ -84,7 +84,6 @@
                 </div>
                 <!--end hover description-->
 
-                <img class="card-img-top" id="tat" src="../Images/tatUI.png">
                 <div class="card-body">
                 <p id="card-text">The Adaptive Traveler</p>
                 </div>
