added hover to over panels on webPort

--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -96,7 +96,16 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
         <a href="https://ewill20.github.io/clicktrip/" target="_blank">
         <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
-            <img class="card-img-top" id="clicktrip" src="../Images/clicktripUI.png">
+            
+            <!--Hover description over the photo-->
+            <div class="view overlay" id="clickDesc">
+                <img class="card-img-top img-fluid" id="clicktrip" src="../Images/clicktripUI.png">
+                <div class="mask flex-center rgba-blue-strong">
+                    <p class="white-text">
+                        A website designed for those that love to take photographs while traveling.  This site specializes in the off-the-beaten-path photo locations not as widely known about by most travelers.
+                    </p>
+                </div>
+            </div>
             <div class="card-body">
                 <p id="card-text">clickTrip</p>
                 </div>
@@ -107,8 +116,19 @@
         <!--Right Column Panel-->
         <!--Innovative Photos-->
         <a href="https://innovative-photos.herokuapp.com/" target="_blank">
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
-                <img class="card-img-top" id="inPhotos" src="../Images/IPLOGO.jpg">
+            <div class="card" style="max-width: 100%; max-height: 100%;     background-color: white; border: solid lightgray 1px;">
+                
+            <!--start hover effect-->
+            <div class="view overlay" id="inPhotoDesc">
+                <img class="card-img-top img-fluid" id="inPhotos" src="../Images/IPLOGO.jpg">
+                    <div class="mask flex-center rgba-blue-strong">
+                        <p class="white-text">
+                             A website where one can order several different styles of prints ranging from acrylic, to aluminum, and more.  The website is only applicable in Mainland China.
+                        </p>
+                    </div>
+            </div>
+
+
                 <div class="card-body">
                 <p id="card-text">Innovative Photos/创新照片</p>
                 </div>
