--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,5 @@
 <!--Start Nav-->
 <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
-    <!-- <div class="container"> -->
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -152,6 +151,6 @@
         </div>
     </div>
 </div>
-<footer class="footer">
+<!--<footer class="footer">
     © Copyright 2019 Eric Willard
-</footer>
+</footer>-->
