--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,7 +24,9 @@
     
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../public/MDB/css/mdb.css">
+    <link href="../MDB/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../MDB/css/mdb.min.css">
+    <link rel="stylesheet" type="text/css" href="../MDB/css/style.css">
     
     <!-- FontAwesome Icons CDN -->
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
@@ -64,5 +66,7 @@
     
 
 </body>
-
+<footer class="footer">
+    © Copyright 2019 Eric Willard
+</footer>
 </html>
