updated all pages

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,5 @@
 <!--Start Nav-->
-    <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
-        <!-- <div class="container"> -->
+    <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
         <a class="navbar-brand" href="/home">Eric Willard</a>
 
         <!-- Social Media Contact Links-->
@@ -41,8 +40,6 @@
             </a>
         </li>
     </ul>
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 
         <!-- Links -->
         <ul class="navbar-nav navbar-right list-inline">
@@ -57,7 +54,7 @@
                 <a class="nav-link" href="/contact">Contact</a>
             </li>
         </ul>
-        </div>
+
     </nav>
     <!--End Navbar-->
 
