--- a/views/education.hbs
+++ b/views/education.hbs
@@ -1,7 +1,5 @@
-<div class="container-fluid">
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
-    <!-- <div class="container"> -->
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -42,8 +40,6 @@
             </a>
         </li>
     </ul>
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 
     <!-- Links -->
     <ul class="navbar-nav navbar-right list-inline">
@@ -58,9 +54,9 @@
             <a class="nav-link" href="/about">About</a>
         </li>
     </ul>
-    </div>
+   
 </nav>
-</div>
+
 <!--End Navbar-->
 
 
