--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -105,6 +105,6 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer aqua-gradient-rgba">
         © Copyright 2019 Eric Willard
     </footer>
