--- a/views/about.hbs
+++ b/views/about.hbs
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer aqua-gradient-rgba">
         © Copyright 2019 Eric Willard
     </footer>
     </div>
