--- a/views/home.hbs
+++ b/views/home.hbs
@@ -151,6 +151,6 @@
         </div>
     </div>
 </div>
-<!--<footer class="footer">
+<footer class="footer aqua-gradient-rgba">
     © Copyright 2019 Eric Willard
-</footer>-->
+</footer>
